// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build setup adds a prelude containing start time and \`__DEV__\` to the build 1`] = `
Object {
  "dependencies": Array [],
  "file": Object {
    "code": "var __DEV__=true,__BUNDLE_START_TIME__=this.nativePerformanceNow?nativePerformanceNow():Date.now(),process=this.process||{};process.env=process.env||{};process.env.NODE_ENV='development';",
    "map": null,
    "path": "",
    "type": "script",
  },
}
`;

exports[`build setup sets \`__DEV__\` to false in the prelude if optimization is enabled 1`] = `
Object {
  "dependencies": Array [],
  "file": Object {
    "code": "var __DEV__=false,__BUNDLE_START_TIME__=this.nativePerformanceNow?nativePerformanceNow():Date.now(),process=this.process||{};process.env=process.env||{};process.env.NODE_ENV='production';",
    "map": null,
    "path": "",
    "type": "script",
  },
}
`;
